@@ -1,3 +1,15 @@
+2005-12-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b59
+
+ * Fix: Enable ImageMaps only in resized view.
+
+ * Change: AltText on tipIcon
+
+ * New: functions galleryLink() & generateAttrs()
+
+ * Change: Added link back to photo from ImageMaps
+
+ * Change: some indenting.
+
 2005-12-24 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b58
 
  * Fix: Step 3 in Config was little bit broken.
